# aiida-workgraph

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  pyproject.toml  setup.py  test.py
.github/actions/install-aiida-workgraph/: action.yaml
.github/config/: code-add.yaml  code-dos.yaml  code-projwfc.yaml  code-pw.yaml  code-python.yaml  profile.yaml  setup_config.sh
.github/workflows/: ci.yaml  create_release.yml  pre-commit.yaml  python-publish.yml
aiida_workgraph/: __init__.py  collection.py  config.py  decorator.py  node.py  property.py  socket.py  task.py  workgraph.py  worknode.py
aiida_workgraph/calculations/: general_data.py  python.py  python_parser.py
aiida_workgraph/cli/: __init__.py  cmd_graph.py  cmd_scheduler.py  cmd_task.py  cmd_web.py  query_workgraph.py
aiida_workgraph/engine/: awaitable_manager.py  launch.py  override.py  scheduler.py  task_manager.py  utils.py  workgraph.py
aiida_workgraph/engine/scheduler/: __init__.py  client.py  scheduler.py
aiida_workgraph/executors/: builtin.py  builtins.py  monitors.py  qe.py  test.py
aiida_workgraph/nodes/: __init__.py  builtin.py  qe.py  test.py
aiida_workgraph/orm/: __init__.py  atoms.py  function_data.py  general_data.py  serializer.py  workgraph.py
aiida_workgraph/orm/data/: iterator.py
aiida_workgraph/properties/: __init__.py  built_in.py  builtins.py
aiida_workgraph/sockets/: __init__.py  built_in.py  builtins.py
aiida_workgraph/tasks/: __init__.py  builtin.py  builtins.py  monitors.py  pythonjob.py  qe.py  test.py
aiida_workgraph/utils/: __init__.py  analysis.py  control.py  graph.py  message.py  node.py  svg_to_html.py
aiida_workgraph/web/: README.md
aiida_workgraph/web/frontend/: package-lock.json  package.json
aiida_workgraph/widget/: README.md  package-lock.json  package.json  pyproject.toml
aiida_workgraph/widget/js/: default_rete.ts  widget.tsx
aiida_workgraph/widget/src/widget/: __init__.py  html_template.py  utils.py
aiida_workgraph_web/backend/app/: api.py  datanode.py
aiida_workgraph_web/frontend/: README.md  package-lock.json
aiida_workgraph_web/frontend/public/: index.html
aiida_workgraph_web/frontend/src/: App.css
aiida_workgraph_widget/: .gitignore  package-lock.json  package.json  pyproject.toml
aiida_workgraph_widget/js/: widget.css  widget.tsx
aiida_workgraph_widget/src/widget/: __init__.py  html_template.py
aiida_worktree/: __init__.py  decorator.py  node.py  property.py  socket.py  utils.py  worktree.py
aiida_worktree/cli/: __init__.py  cmd_tree.py  cmd_web.py  cmd_worktree.py  query_worktree.py
aiida_worktree/engine/: worktree.py
aiida_worktree/executors/: qe.py  test.py
aiida_worktree/nodes/: __init__.py  builtin.py  qe.py  test.py
aiida_worktree/orm/: worktree.py
aiida_worktree/properties/: __init__.py  built_in.py
aiida_worktree/sockets/: __init__.py  built_in.py
aiida_worktree/utils/: __init__.py  analysis.py  tree.py
aiida_worktree/web/: README.md
aiida_worktree/web/frontend/: .rete-patch  package-lock.json  package.json
aiida_worktree/widget/: README.md  __init__.py  example.ipynb  package-lock.json  package.json  pyproject.toml
aiida_worktree/widget/js/: default_rete.ts  widget.css  widget.tsx
docs/: Makefile  environment.yml  requirements.txt
docs/gallery/autogen/: quick_start.py
docs/source/: add0.html  atomization_energy.html  blog.ipynb  conf.py  eos.html  faqs.ipynb  first_workflow.html  gallery.rst  if_node.html  index.rst  installation.rst  node.rst  overview.rst  quick_start.ipynb  relax_eos.html  second_workflow.html  test_add_multiply.html  third_workflow.html  worktree.rst  zero_to_hero.ipynb
docs/source/_static/: first_workflow.html
docs/source/advanced/: index.rst
docs/source/blog/: aiida_python.ipynb  index.rst  workgraph_vs_workchain.ipynb  worktree.ipynb  worktree_vs_workchain.ipynb
docs/source/built-in/: aiida_python.ipynb  aiida_shell.ipynb  index.rst  monitor.ipynb  pythonjob.ipynb  pythontask.ipynb  shelljob.ipynb  shelltask.ipynb
docs/source/cli/: control.rst
docs/source/concept/: index.rst  node.ipynb  node.rst  socket.ipynb  task.ipynb  workgraph.rst  worktree.rst
docs/source/development/: contributing.rst  custom_task.rst  data_serialization.md  data_serialization.rst  engine.md  engine.rst  index.rst  map_task.rst  python_task.ipynb  pythonjob.ipynb  scheduler.rst  shelljob.ipynb  test.rst
docs/source/gui/: index.rst  web.rst
docs/source/howto/: Electronic Structure.html  WorkGraph.html  aiida_python.ipynb  aiida_shell.ipynb  append_workgraph.ipynb  append_worktree.ipynb  async.ipynb  atomization_energy.html  bak.if.ipynb  cli.rst  combine_workgraph.ipynb  context.ipynb  control.rst  ctx.ipynb  (+31 more)
examples/: aiida_shell_calcjob.py  aiida_shell_group.py  demo.py  eos-2.py  eos-group.py  eos.py  example.ipynb  examples.ipynb  examples_widget.ipynb  fibonacci.ipynb  xps.py
src/aiida_workgraph/: __init__.py  collection.py  config.py  decorator.py  enums.py  manager.py  property.py  registry.py  serialization.py  socket.py  socket_spec.py  task.py  workgraph.py
tests/: README.md  conftest.py  debug_tests.py  debug_worker.py  test_action.py  test_async_task.py  test_awaitable_task.py  test_build_node.py  test_build_task.py  test_calcfunction.py  test_calcjob.py  test_cli.py  test_config.py  test_ctx.py  test_data.py  test_data_task.py  test_data_type.py  test_decorator.py  test_engine.py  test_enums.py  test_error_handler.py  test_failed_node.py  test_for.py  test_future_annotations.py  test_graph_task.py  test_group_inputs_outputs.py  test_if.py  test_imperative.py  test_link.py  test_manager.py  test_map.py  test_monitor.py  test_node_wait.py  test_normal_function.py  test_protocol.py  test_pydantic.py  test_python.py  test_pythonjob.py  test_qe.py  test_scheduler.py  (+16 more)
tests/datas/: test_calcfunction.yaml  test_calcjob.yaml
tests/process/: test_utils.py
tests/utils/: test_workchain.py
tests/web/: conftest.py  test_backend.py  test_frontend.py
tests/widget/: test_widget.py
(+311 files in other folders)
