[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.4,<4"]

[project]
authors = [{name = "Xing Wang", email = "xingwang1991@gmail.com"}]
classifiers = [
  "Development Status :: 1 - Planning",
  "Framework :: AiiDA",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "numpy",
  "scipy",
  "node-graph~=0.6.5",
  "node-graph-widget>=0.0.5",
  "aiida-core>=2.7.3,<3.0",
  "cloudpickle",
  "aiida-shell~=0.8",
  "aiida-pythonjob~=0.5.2",
  "jsonschema"
]
description = "Design flexible node-based workflow for AiiDA calculation."
dynamic = ["version"]  # read from aiida_workgraph/__init__.py
keywords = ["aiida", "workflows"]
license = {file = "LICENSE"}
name = "aiida-workgraph"
readme = "README.md"
requires-python = ">=3.10,<3.14"

[project.entry-points."aiida.cmdline"]
"workgraph" = "aiida_workgraph.cli.cmd_workgraph:workgraph"

[project.entry-points."aiida.node"]
"process.workflow.workgraph" = "aiida_workgraph.orm.workgraph:WorkGraphNode"

[project.entry-points.'aiida.workflows']
"workgraph.engine" = "aiida_workgraph.engine.workgraph:WorkGraphEngine"

[project.entry-points."aiida_workgraph.property"]
"workgraph.aiida_float_vector" = "aiida_workgraph.properties.builtins:PropertyAiiDAFloatVector"
"workgraph.aiida_int_vector" = "aiida_workgraph.properties.builtins:PropertyAiiDAIntVector"
"workgraph.aiida_structuredata" = "aiida_workgraph.properties.builtins:PropertyStructureData"
"workgraph.any" = "aiida_workgraph.properties.builtins:PropertyAny"
"workgraph.bool" = "aiida_workgraph.properties.builtins:PropertyBool"
"workgraph.dict" = "aiida_workgraph.properties.builtins:PropertyDict"
"workgraph.float" = "aiida_workgraph.properties.builtins:PropertyFloat"
"workgraph.int" = "aiida_workgraph.properties.builtins:PropertyInt"
"workgraph.list" = "aiida_workgraph.properties.builtins:PropertyList"
"workgraph.string" = "aiida_workgraph.properties.builtins:PropertyString"

[project.entry-points."aiida_workgraph.socket"]
"workgraph.aiida_float_vector" = "aiida_workgraph.sockets.builtins:SocketAiiDAFloatVector"
"workgraph.aiida_int_vector" = "aiida_workgraph.sockets.builtins:SocketAiiDAIntVector"
"workgraph.aiida_structuredata" = "aiida_workgraph.sockets.builtins:SocketStructureData"
"workgraph.annotated" = "aiida_workgraph.sockets.builtins:SocketAnnotated"
"workgraph.any" = "aiida_workgraph.sockets.builtins:SocketAny"
"workgraph.bool" = "aiida_workgraph.sockets.builtins:SocketBool"
"workgraph.dict" = "aiida_workgraph.sockets.builtins:SocketDict"
"workgraph.float" = "aiida_workgraph.sockets.builtins:SocketFloat"
"workgraph.int" = "aiida_workgraph.sockets.builtins:SocketInt"
"workgraph.list" = "aiida_workgraph.sockets.builtins:SocketList"
"workgraph.namespace" = "aiida_workgraph.socket:TaskSocketNamespace"
"workgraph.string" = "aiida_workgraph.sockets.builtins:SocketString"

[project.entry-points."aiida_workgraph.task"]
"workgraph.aiida_dict" = "aiida_workgraph.tasks.builtins:aiida_dict"
"workgraph.aiida_float" = "aiida_workgraph.tasks.builtins:aiida_float"
"workgraph.aiida_int" = "aiida_workgraph.tasks.builtins:aiida_int"
"workgraph.aiida_list" = "aiida_workgraph.tasks.builtins:aiida_list"
"workgraph.aiida_process" = "aiida_workgraph.tasks.aiida:AiiDAProcessTask"
"workgraph.aiida_string" = "aiida_workgraph.tasks.builtins:aiida_string"
"workgraph.any" = "aiida_workgraph.task:Task"
"workgraph.gather_item" = "aiida_workgraph.tasks.builtins:GatherItem"
"workgraph.get_context" = "aiida_workgraph.tasks.builtins:GetContext"
"workgraph.graph_level" = "aiida_workgraph.tasks.builtins:GraphLevelTask"
"workgraph.if_zone" = "aiida_workgraph.tasks.builtins:If"
"workgraph.load_code" = "aiida_workgraph.tasks.builtins:AiiDACode"
"workgraph.load_node" = "aiida_workgraph.tasks.builtins:AiiDANode"
"workgraph.map_item" = "aiida_workgraph.tasks.builtins:MapItem"
"workgraph.map_zone" = "aiida_workgraph.tasks.builtins:Map"
"workgraph.monitor_file" = "aiida_workgraph.tasks.monitors:monitor_file"
"workgraph.monitor_task" = "aiida_workgraph.tasks.monitors:monitor_task"
"workgraph.monitor_time" = "aiida_workgraph.tasks.monitors:monitor_time"
"workgraph.select" = "aiida_workgraph.tasks.builtins:Select"
"workgraph.set_context" = "aiida_workgraph.tasks.builtins:SetContext"
"workgraph.subgraph_task" = "aiida_workgraph.tasks.subgraph_task:SubGraphTask"
"workgraph.test_add" = "aiida_workgraph.executors.test:add"
"workgraph.test_arithmetic_multiply_add" = "aiida_workgraph.tasks.test:TestArithmeticMultiplyAdd"
"workgraph.test_sum_diff" = "aiida_workgraph.executors.test:sum_diff"
"workgraph.while_zone" = "aiida_workgraph.tasks.builtins:While"
"workgraph.zone" = "aiida_workgraph.tasks.builtins:Zone"

[project.entry-points."aiida_workgraph.type_mapping"]
"workgraph.builtins_mapping" = "aiida_workgraph.orm.mapping:builtins_type_mapping"

[project.entry-points."aiida_workgraph.type_promotion"]
"workgraph.builtins_mapping" = "aiida_workgraph.orm.mapping:TYPE_PROMOTIONS"

[project.optional-dependencies]
docs = [
  "sphinx_rtd_theme>=3.0",
  "sphinx~=7.2",
  "sphinx-copybutton~=0.5.0",
  "sphinx-design~=0.5.0",
  "sphinx-notfound-page~=1.0",
  "sphinxext-rediraffe~=0.2.4",
  "sphinx-intl~=2.1.0",
  "sphinx-gallery",
  "myst-nb~=1.0.0",
  "nbsphinx",
  "furo",
  "aiida-quantumespresso",
  "aiida-pseudo",
  "anywidget",
  "sphinx-autobuild",
  "click~=8.1.0"
]
pre-commit = [
  "mypy~=2.1.0",
  "pre-commit~=4.3"
]
tests = [
  'pgtest~=1.3',
  "pytest~=7.0",
  "pytest-cov~=2.7,<2.11",
  "pytest-xdist~=3.8",
  "playwright",
  "httpx"
]

[project.scripts]
workgraph = "aiida_workgraph.cli.cmd_workgraph:workgraph"

[project.urls]
Documentation = "https://aiida-workgraph.readthedocs.io"
Source = "https://github.com/aiidateam/aiida-workgraph"

[tool.flit.sdist]
exclude = ["docs/", "tests/"]

[tool.mypy]
enable_error_code = [
  'ignore-without-code',
  'redundant-expr',
  'truthy-bool'
]
python_version = "3.10"
show_error_codes = true
strict = true
warn_unreachable = true

# Third-party dependencies that ship no type information (no py.typed / stubs).
# TODO: 'yaml' and 'tabulate' have stub packages (types-PyYAML, types-tabulate);
# switch those to real stubs once added to the pre-commit extra.
[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  'aiida_pythonjob',
  'aiida_pythonjob.*',
  'kiwipy',
  'kiwipy.*',
  'node_graph',
  'node_graph.*',
  'tabulate',
  'tabulate.*',
  'yaml',
  'yaml.*'
]

# Modules not yet annotated for strict type checking. Type checking runs
# strictly everywhere; these are temporarily exempt from error reporting and
# get cleaned up and removed from this list one by one. Do NOT relax the global
# strictness above to silence errors; the goal is to empty this list.
[[tool.mypy.overrides]]
ignore_errors = true
module = [
  'aiida_workgraph.cli.cmd_task',
  'aiida_workgraph.cli.cmd_workgraph',
  'aiida_workgraph.config',
  'aiida_workgraph.decorator',
  'aiida_workgraph.engine.awaitable_manager',
  'aiida_workgraph.engine.context_manager',
  'aiida_workgraph.engine.error_handler_manager',
  'aiida_workgraph.engine.task_actions',
  'aiida_workgraph.engine.task_manager',
  'aiida_workgraph.engine.task_state',
  'aiida_workgraph.engine.workgraph',
  'aiida_workgraph.executors.builtins',
  'aiida_workgraph.executors.test',
  'aiida_workgraph.manager',
  'aiida_workgraph.orm.utils',
  'aiida_workgraph.orm.workgraph',
  'aiida_workgraph.properties.builtins',
  'aiida_workgraph.property',
  'aiida_workgraph.serialization',
  'aiida_workgraph.socket',
  'aiida_workgraph.socket_spec',
  'aiida_workgraph.task',
  'aiida_workgraph.tasks.aiida',
  'aiida_workgraph.tasks.builtins',
  'aiida_workgraph.tasks.function_task',
  'aiida_workgraph.tasks.graph_task',
  'aiida_workgraph.tasks.monitors',
  'aiida_workgraph.tasks.pythonjob_tasks',
  'aiida_workgraph.tasks.shelljob_task',
  'aiida_workgraph.tasks.subgraph_task',
  'aiida_workgraph.tasks.tests',
  'aiida_workgraph.utils',
  'aiida_workgraph.utils.control',
  'aiida_workgraph.utils.logging',
  'aiida_workgraph.workgraph'
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.ruff.lint.per-file-ignores]
"docs/gallery/*/autogen/*.py" = ["E402", "F811"]
"docs/gallery/autogen/*.py" = ["E402", "F811"]
