[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "node-graph-widget"
version = "0.0.1"
description = "Widget for node-graph"
authors = [{name = "Xing Wang", email = "xingwang1991@gmail.com"}]
readme = "README.md"
dependencies = ["anywidget"]
readme = "README.md"

[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

# automatically add the dev feature to the default env (e.g., hatch shell)
[tool.hatch.envs.default]
features = ["dev"]


[tool.hatch.build]
only-packages = true
artifacts = ["src/widget/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/widget/static/widget.js"]
skip-if-exists = ["src/widget/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"
